codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__session_list_second_page.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ SYSTEM  Better Codex app shell                 │▎● FOCUSED  ACTIVE  25 sessions
 ▎ YOU  Create a divergent standalone TUI.        │▎+ New session  Ctrl+N
                                                  │▎  17/25 Session 16 [main]  pagination fixture
 ▎ CODEX  Started a fullscreen app shell backed   │▎  18/25 Session 17 [main]  pagination fixture
          by app-server turns.                    │▎  19/25 Session 18 [main]  pagination fixture
 ▎ PLAN  1. Build shell                           │▎  20/25 Session 19 [main]  pagination fixture
         2. Wire transcript                       │▎› 21/25 Session 20 [main]  pagination fixture
         3. Render dashboard                      │
                                                  │▎◆ THREAD
 ▌ tool exec just test -p codex-tui               │▎stage-one
                                                  │▎id 01900000-0000-7000-8000-000000000001
 ▌ edited 3 files +128 -24                        │▎resume, fork, archive, delete in session list
                                                  │
 ▎ CODEX  The new shell owns the fullscreen       │
          surface.                                │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
