codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__session_rename_cursor.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&rename, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ SYSTEM  Better Codex app shell                 │▎● FOCUSED  ACTIVE  1 sessions
 ▎ YOU  Create a divergent standalone TUI.        │▎+ New session  Ctrl+N
                                                  │▎rename* …tsegmentsegmentsegmentsegmentsegment ▏
 ▎ CODEX  Started a fullscreen app shell backed   │▎› 1/1 alpha segmentsegmentsegmentsegmentsegmen…
          by app-server turns.                    │
 ▎ PLAN  1. Build shell                           │▎◆ THREAD
         2. Wire transcript                       │▎stage-one
         3. Render dashboard                      │▎id 01900000-0000-7000-8000-000000000001
                                                  │▎resume, fork, archive, delete in session list
 ▌ tool exec just test -p codex-tui               │
                                                  │
 ▌ edited 3 files +128 -24                        │
                                                  │
 ▎ CODEX  The new shell owns the fullscreen       │
          surface.                                │
                                                  │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
