codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__settings_empty_rows_ignore_pointer_hover_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "buffer_style_grid(&render_shell_buffer(&shell, area))"
---
style grid 100x28:
0000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000
0222222222220344400000555555555555555066666666666017777777777771888888888881888888888888818888888880
1111111111111111111111111111111111111111111111111117777777777771111111111111111111111111111111111110
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9AABBBBBBBBBBBB9999999999999999999999999999999999911CCDDDDDDDD00000000000000000000000000000000000000
9BBBBBBBBBBEEEEEEEEEEEEEEEEEEEEEE9999999999999999911888888177777777777771888888888888188888888888880
9FFFFFFF999999999999999999999999999999999999999999111111111CCCCCCCCCCCCC1111111111111111111111111110
9999999999999999999999999999999999999999999999999911G55555555555555555555500000000000000000000000000
9HHHHHHHHH999999999999999999999999999999999999999911000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911000000000000000000000000000000000000000000000000
9IIIIIIIIAAAJJJJJJJJJJJ99999999999999999999999999911000000000000000000000000000000000000000000000000
9JJJJJJJJAAAJJJJJJJJJJJJJJJ9999999999999999999999910000000000000000000000000000000000000000000000000
9JJJJJJJJAAAJJJJJJJJJJJJJJJJ999999999999999999999911CCDDDD000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK00000000000
9LMNNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM911OK0000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911PK0000000000000000000000000000000000000000000000
9QMNNNNNNNMMMMMMMMQQQQQRRRMMMMMMMMMMMMMMMMMMMMMMM911KK0000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9HHHHHHHHH999999999999999999999999999999999999999911CCDDDDD00000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911SSSSSSSSSSSK000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999910000000000000000000000000000000000000000000000000
9999999999999999999999999999999999999999999999999911CCDDDDD00000000000000000000000000000000000000000
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT1100000000OOOOOUUU00000000000000000000000000000000
TTTNNNNNNNNNNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMT10000000000000000000000000000000000000000000000000
TTTMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMT11CCDDDDDDDDD0000000000000000000000000000000000000
TMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMT11KKKKKKKK0000000000000000000000000000000000000000
TMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMT11KKKK00000000000000000000000000000000000000000000
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT10000000000000000000000000000000000000000000000000
legend:
0 (1084 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
1 (173 cells): Style::new().fg(Color::Rgb(65, 72, 104)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
2 (11 cells): Style::new().fg(Color::Rgb(22, 22, 30)).bg(Color::Rgb(122, 162, 247)).underline_color(Color::Reset).bold()
3 (1 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
4 (3 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
5 (36 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
6 (11 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset)
7 (37 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
8 (64 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
9 (708 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
A (11 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
B (22 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
C (23 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
D (31 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
E (22 cells): Style::new().fg(Color::Rgb(86, 95, 137)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
F (7 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
G (1 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(41, 46, 66)).underline_color(Color::Reset).bold()
H (18 cells): Style::new().fg(Color::Rgb(187, 154, 247)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
I (8 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset).bold()
J (58 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(26, 27, 38)).underline_color(Color::Reset)
K (54 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).dim()
L (1 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
M (249 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
N (25 cells): Style::new().fg(Color::Rgb(192, 202, 245)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset).bold()
O (6 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
P (1 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset).bold()
Q (6 cells): Style::new().fg(Color::Rgb(158, 206, 106)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
R (3 cells): Style::new().fg(Color::Rgb(247, 118, 142)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
S (11 cells): Style::new().fg(Color::Rgb(125, 207, 255)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
T (112 cells): Style::new().fg(Color::Rgb(122, 162, 247)).bg(Color::Rgb(36, 40, 59)).underline_color(Color::Reset)
U (3 cells): Style::new().fg(Color::Rgb(247, 118, 142)).bg(Color::Rgb(22, 22, 30)).underline_color(Color::Reset)
